# MetricsCollector

./: .clang-format  CMakeLists.txt  Metric.hpp  README.md  RandomEvent.hpp  main.cpp
HelpersFunctions/: RandomEvent.cpp
MetricsCollector/: IMetric.hpp  MetricsCollector.cpp  MetricsCollector.hpp
